P5_Migue/y.output
La regla es inútil debido a los conflictos

   47 $@4: %empty


Estado 69 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: Programa $end

    1 $@1: %empty

    2 Programa: $@1 CABECERA bloque

    3 bloque: ini_bloque declar_de_variables_locales declar_de_subprogs sentencias fin_bloque
    4       | ini_bloque declar_de_variables_locales sentencias fin_bloque
    5       | ini_bloque declar_de_subprogs fin_bloque
    6       | ini_bloque sentencias fin_bloque

    7 ini_bloque: INIBLOQUE

    8 fin_bloque: FINBLOQUE

    9 declar_de_variables_locales: INICIOVARIABLES variables FINVARIABLES

   10 variables: cuerpo_de_variables
   11          | variables cuerpo_de_variables

   12 cuerpo_de_variables: TIPO lista_identificador FINLINEA
   13                    | TIPO lista_identificador_array FINLINEA
   14                    | error

   15 lista_identificador_array: lista_identificador_array COMA identificador_array
   16                          | identificador_array

   17 identificador_array: IDENTIFICADOR ABRIRCORCHETE ENTERO CERRARCORCHETE
   18                    | IDENTIFICADOR ABRIRCORCHETE ENTERO CERRARCORCHETE ABRIRCORCHETE ENTERO CERRARCORCHETE

   19 lista_identificador: lista_identificador COMA IDENTIFICADOR
   20                    | IDENTIFICADOR

   21 declar_de_subprogs: declar_de_subprogs declar_subprogs
   22                   | declar_subprogs

   23 $@2: %empty

   24 declar_subprogs: cabecera_subprograma $@2 bloque

   25 cabecera_subprograma: TIPO IDENTIFICADOR PARENTESISABIERTO lista_de_parametros PARENTESISCERRADO

   26 lista_de_parametros: lista_de_parametros COMA TIPO IDENTIFICADOR
   27                    | lista_de_parametros COMA TIPO identificador_array
   28                    | TIPO IDENTIFICADOR
   29                    | TIPO identificador_array
   30                    | error

   31 sentencias: sentencias sentencia
   32           | sentencia

   33 $@3: %empty

   34 sentencia: $@3 bloque
   35          | sentencia_asignacion
   36          | sentencia_if
   37          | sentencia_while
   38          | sentencia_entrada
   39          | sentencia_salida
   40          | sentencia_return
   41          | sentencia_switch
   42          | error

   43 sentencia_asignacion: nombre_var ASIGNACION expresion FINLINEA

   44 nombre_var: IDENTIFICADOR
   45           | IDENTIFICADOR ABRIRCORCHETE expresion CERRARCORCHETE
   46           | IDENTIFICADOR ABRIRCORCHETE expresion CERRARCORCHETE ABRIRCORCHETE expresion CERRARCORCHETE

   47 $@4: %empty

   48 sentencia_if: CONDICION PARENTESISABIERTO expresion $@4 PARENTESISCERRADO sentencia

   49 $@5: %empty

   50 $@6: %empty

   51 sentencia_if: CONDICION PARENTESISABIERTO expresion PARENTESISCERRADO $@5 sentencia SUBCONDICION $@6 sentencia

   52 $@7: %empty

   53 sentencia_while: CICLO PARENTESISABIERTO expresion $@7 PARENTESISCERRADO sentencia

   54 sentencia_entrada: ENTRADA lista_variables FINLINEA

   55 lista_variables: lista_variables COMA IDENTIFICADOR
   56                | IDENTIFICADOR

   57 sentencia_salida: SALIDA lista_exp_cadena FINLINEA

   58 sentencia_return: RETURN expresion FINLINEA

   59 sentencia_switch: OPCION PARENTESISABIERTO expresion PARENTESISCERRADO ini_bloque sentencia_case fin_bloque
   60                 | OPCION PARENTESISABIERTO expresion PARENTESISCERRADO ini_bloque sentencia_case default fin_bloque

   61 sentencia_case: sentencia_case CASO DOSPUNTOS constante sentencia
   62               | CASO DOSPUNTOS constante sentencia
   63               | sentencia_case CASO DOSPUNTOS constante sentencia BREAK FINLINEA
   64               | CASO DOSPUNTOS constante sentencia BREAK FINLINEA

   65 default: DEFAULT DOSPUNTOS sentencia

   66 constante: ENTERO
   67          | CONSTANTES

   68 lista_exp: expresion COMA lista_exp
   69          | expresion

   70 lista_exp_cadena: lista_exp_cadena COMA exp_cadena
   71                 | exp_cadena

   72 exp_cadena: expresion
   73           | CADENA

   74 expresion: PARENTESISABIERTO expresion PARENTESISCERRADO
   75          | OPSUMARESTA expresion
   76          | OPUNARIO expresion
   77          | expresion OPBINARIOS expresion
   78          | expresion OPSUMARESTA expresion
   79          | expresion OPBINARIOS_MULTI expresion
   80          | expresion OPBINARIOS_IGUALDAD expresion
   81          | expresion OPBINARIOS_OR expresion
   82          | expresion OPBINARIOS_AND expresion
   83          | nombre_var
   84          | constante
   85          | funcion

   86 $@8: %empty

   87 funcion: IDENTIFICADOR $@8 PARENTESISABIERTO lista_exp PARENTESISCERRADO


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 14 30 42
CABECERA (258) 2
TIPO (259) 12 13 25 26 27 28 29
CONDICION (260) 48 51
SUBCONDICION (261) 51
CICLO (262) 53
OPCION (263) 59 60
CASO (264) 61 62 63 64
SALIDA (265) 57
RETURN (266) 58
INIBLOQUE (267) 7
FINBLOQUE (268) 8
INICIOVARIABLES (269) 9
FINVARIABLES (270) 9
CONSTANTES (271) 67
PARENTESISCERRADO (272) 25 48 51 53 59 60 74 87
ABRIRCORCHETE (273) 17 18 45 46
CERRARCORCHETE (274) 17 18 45 46
COMA (275) 15 19 26 27 55 68 70
FINLINEA (276) 12 13 43 54 57 58 63 64
OPBINARIOS (277) 77
OPSUMARESTA (278) 75 78
ASIGNACION (279) 43
ENTRADA (280) 54
DOSPUNTOS (281) 61 62 63 64 65
ENTERO (282) 17 18 66
CADENA (283) 73
IDENTIFICADOR (284) 17 18 19 20 25 26 28 44 45 46 55 56 87
PARENTESISABIERTO (285) 25 48 51 53 59 60 74 87
OPUNARIO (286) 76
DEFAULT (287) 65
BREAK (288) 63 64
OPBINARIOS_OR (289) 81
OPBINARIOS_AND (290) 82
OPBINARIOS_IGUALDAD (291) 80
OPBINARIOS_MULTI (292) 79


No terminales con las reglas donde aparecen

$accept (38)
    en la izquierda: 0
Programa (39)
    en la izquierda: 2, en la derecha: 0
$@1 (40)
    en la izquierda: 1, en la derecha: 2
bloque (41)
    en la izquierda: 3 4 5 6, en la derecha: 2 24 34
ini_bloque (42)
    en la izquierda: 7, en la derecha: 3 4 5 6 59 60
fin_bloque (43)
    en la izquierda: 8, en la derecha: 3 4 5 6 59 60
declar_de_variables_locales (44)
    en la izquierda: 9, en la derecha: 3 4
variables (45)
    en la izquierda: 10 11, en la derecha: 9 11
cuerpo_de_variables (46)
    en la izquierda: 12 13 14, en la derecha: 10 11
lista_identificador_array (47)
    en la izquierda: 15 16, en la derecha: 13 15
identificador_array (48)
    en la izquierda: 17 18, en la derecha: 15 16 27 29
lista_identificador (49)
    en la izquierda: 19 20, en la derecha: 12 19
declar_de_subprogs (50)
    en la izquierda: 21 22, en la derecha: 3 5 21
declar_subprogs (51)
    en la izquierda: 24, en la derecha: 21 22
$@2 (52)
    en la izquierda: 23, en la derecha: 24
cabecera_subprograma (53)
    en la izquierda: 25, en la derecha: 24
lista_de_parametros (54)
    en la izquierda: 26 27 28 29 30, en la derecha: 25 26 27
sentencias (55)
    en la izquierda: 31 32, en la derecha: 3 4 6 31
sentencia (56)
    en la izquierda: 34 35 36 37 38 39 40 41 42, en la derecha: 31
    32 48 51 53 61 62 63 64 65
$@3 (57)
    en la izquierda: 33, en la derecha: 34
sentencia_asignacion (58)
    en la izquierda: 43, en la derecha: 35
nombre_var (59)
    en la izquierda: 44 45 46, en la derecha: 43 83
sentencia_if (60)
    en la izquierda: 48 51, en la derecha: 36
$@4 (61)
    en la izquierda: 47, en la derecha: 48
$@5 (62)
    en la izquierda: 49, en la derecha: 51
$@6 (63)
    en la izquierda: 50, en la derecha: 51
sentencia_while (64)
    en la izquierda: 53, en la derecha: 37
$@7 (65)
    en la izquierda: 52, en la derecha: 53
sentencia_entrada (66)
    en la izquierda: 54, en la derecha: 38
lista_variables (67)
    en la izquierda: 55 56, en la derecha: 54 55
sentencia_salida (68)
    en la izquierda: 57, en la derecha: 39
sentencia_return (69)
    en la izquierda: 58, en la derecha: 40
sentencia_switch (70)
    en la izquierda: 59 60, en la derecha: 41
sentencia_case (71)
    en la izquierda: 61 62 63 64, en la derecha: 59 60 61 63
default (72)
    en la izquierda: 65, en la derecha: 60
constante (73)
    en la izquierda: 66 67, en la derecha: 61 62 63 64 84
lista_exp (74)
    en la izquierda: 68 69, en la derecha: 68 87
lista_exp_cadena (75)
    en la izquierda: 70 71, en la derecha: 57 70
exp_cadena (76)
    en la izquierda: 72 73, en la derecha: 70 71
expresion (77)
    en la izquierda: 74 75 76 77 78 79 80 81 82 83 84 85, en la derecha:
    43 45 46 48 51 53 58 59 60 68 69 72 74 75 76 77 78 79 80 81 82
funcion (78)
    en la izquierda: 87, en la derecha: 85
$@8 (79)
    en la izquierda: 86, en la derecha: 87


Estado 0

    0 $accept: . Programa $end

    $default  reduce usando la regla 1 ($@1)

    Programa  ir al estado 1
    $@1       ir al estado 2


Estado 1

    0 $accept: Programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    2 Programa: $@1 . CABECERA bloque

    CABECERA  desplazar e ir al estado 4


Estado 3

    0 $accept: Programa $end .

    $default  aceptar


Estado 4

    2 Programa: $@1 CABECERA . bloque

    INIBLOQUE  desplazar e ir al estado 5

    bloque      ir al estado 6
    ini_bloque  ir al estado 7


Estado 5

    7 ini_bloque: INIBLOQUE .

    $default  reduce usando la regla 7 (ini_bloque)


Estado 6

    2 Programa: $@1 CABECERA bloque .

    $default  reduce usando la regla 2 (Programa)


Estado 7

    3 bloque: ini_bloque . declar_de_variables_locales declar_de_subprogs sentencias fin_bloque
    4       | ini_bloque . declar_de_variables_locales sentencias fin_bloque
    5       | ini_bloque . declar_de_subprogs fin_bloque
    6       | ini_bloque . sentencias fin_bloque

    error            desplazar e ir al estado 8
    TIPO             desplazar e ir al estado 9
    CONDICION        desplazar e ir al estado 10
    CICLO            desplazar e ir al estado 11
    OPCION           desplazar e ir al estado 12
    SALIDA           desplazar e ir al estado 13
    RETURN           desplazar e ir al estado 14
    INICIOVARIABLES  desplazar e ir al estado 15
    ENTRADA          desplazar e ir al estado 16
    IDENTIFICADOR    desplazar e ir al estado 17

    INIBLOQUE  reduce usando la regla 33 ($@3)

    declar_de_variables_locales  ir al estado 18
    declar_de_subprogs           ir al estado 19
    declar_subprogs              ir al estado 20
    cabecera_subprograma         ir al estado 21
    sentencias                   ir al estado 22
    sentencia                    ir al estado 23
    $@3                          ir al estado 24
    sentencia_asignacion         ir al estado 25
    nombre_var                   ir al estado 26
    sentencia_if                 ir al estado 27
    sentencia_while              ir al estado 28
    sentencia_entrada            ir al estado 29
    sentencia_salida             ir al estado 30
    sentencia_return             ir al estado 31
    sentencia_switch             ir al estado 32


Estado 8

   42 sentencia: error .

    $default  reduce usando la regla 42 (sentencia)


Estado 9

   25 cabecera_subprograma: TIPO . IDENTIFICADOR PARENTESISABIERTO lista_de_parametros PARENTESISCERRADO

    IDENTIFICADOR  desplazar e ir al estado 33


Estado 10

   48 sentencia_if: CONDICION . PARENTESISABIERTO expresion $@4 PARENTESISCERRADO sentencia
   51             | CONDICION . PARENTESISABIERTO expresion PARENTESISCERRADO $@5 sentencia SUBCONDICION $@6 sentencia

    PARENTESISABIERTO  desplazar e ir al estado 34


Estado 11

   53 sentencia_while: CICLO . PARENTESISABIERTO expresion $@7 PARENTESISCERRADO sentencia

    PARENTESISABIERTO  desplazar e ir al estado 35


Estado 12

   59 sentencia_switch: OPCION . PARENTESISABIERTO expresion PARENTESISCERRADO ini_bloque sentencia_case fin_bloque
   60                 | OPCION . PARENTESISABIERTO expresion PARENTESISCERRADO ini_bloque sentencia_case default fin_bloque

    PARENTESISABIERTO  desplazar e ir al estado 36


Estado 13

   57 sentencia_salida: SALIDA . lista_exp_cadena FINLINEA

    CONSTANTES         desplazar e ir al estado 37
    OPSUMARESTA        desplazar e ir al estado 38
    ENTERO             desplazar e ir al estado 39
    CADENA             desplazar e ir al estado 40
    IDENTIFICADOR      desplazar e ir al estado 41
    PARENTESISABIERTO  desplazar e ir al estado 42
    OPUNARIO           desplazar e ir al estado 43

    nombre_var        ir al estado 44
    constante         ir al estado 45
    lista_exp_cadena  ir al estado 46
    exp_cadena        ir al estado 47
    expresion         ir al estado 48
    funcion           ir al estado 49


Estado 14

   58 sentencia_return: RETURN . expresion FINLINEA

    CONSTANTES         desplazar e ir al estado 37
    OPSUMARESTA        desplazar e ir al estado 38
    ENTERO             desplazar e ir al estado 39
    IDENTIFICADOR      desplazar e ir al estado 41
    PARENTESISABIERTO  desplazar e ir al estado 42
    OPUNARIO           desplazar e ir al estado 43

    nombre_var  ir al estado 44
    constante   ir al estado 45
    expresion   ir al estado 50
    funcion     ir al estado 49


Estado 15

    9 declar_de_variables_locales: INICIOVARIABLES . variables FINVARIABLES

    error  desplazar e ir al estado 51
    TIPO   desplazar e ir al estado 52

    variables            ir al estado 53
    cuerpo_de_variables  ir al estado 54


Estado 16

   54 sentencia_entrada: ENTRADA . lista_variables FINLINEA

    IDENTIFICADOR  desplazar e ir al estado 55

    lista_variables  ir al estado 56


Estado 17

   44 nombre_var: IDENTIFICADOR .
   45           | IDENTIFICADOR . ABRIRCORCHETE expresion CERRARCORCHETE
   46           | IDENTIFICADOR . ABRIRCORCHETE expresion CERRARCORCHETE ABRIRCORCHETE expresion CERRARCORCHETE

    ABRIRCORCHETE  desplazar e ir al estado 57

    $default  reduce usando la regla 44 (nombre_var)


Estado 18

    3 bloque: ini_bloque declar_de_variables_locales . declar_de_subprogs sentencias fin_bloque
    4       | ini_bloque declar_de_variables_locales . sentencias fin_bloque

    error          desplazar e ir al estado 8
    TIPO           desplazar e ir al estado 9
    CONDICION      desplazar e ir al estado 10
    CICLO          desplazar e ir al estado 11
    OPCION         desplazar e ir al estado 12
    SALIDA         desplazar e ir al estado 13
    RETURN         desplazar e ir al estado 14
    ENTRADA        desplazar e ir al estado 16
    IDENTIFICADOR  desplazar e ir al estado 17

    INIBLOQUE  reduce usando la regla 33 ($@3)
